# fdf

./: .gitignore  CMakeLists.txt  Makefile  README.md  fdf_cut.mov  hookers.c  line.c  line.h  main.c  main.h  map.c  parser.c  parser.h  part.c  part.h  run.txt  teeet
libft/: Makefile  libft.h
test_maps/: invalid
